Progress on chapter 2 organization

--- a/Chapter 2 - End-to-end machine learning project.ipynb
+++ b/Chapter 2 - End-to-end machine learning project.ipynb
@@ -1559,11 +1559,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Since ML models do not work well with text/categorical data, let's tranform the categories into ordinal numbers. This can be easily done using the `OrdinalEncoder` class from SickitLearn."
    ]
@@ -1610,7 +1605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1620,7 +1615,7 @@
        "       dtype=object)]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1636,7 +1631,7 @@
     "<font color='red'> >> </font> One limiation of the OrdinalEncoder is that we transform the categorical variable into consecutive numbers. This will cause the ML models to understand that the category represented by 1 is more similar to 2 than the category represented by 5. While this can be true for variables such as schooling or how voters evaluate the performance of their current leader, this is not the case here. <br>\n",
     "For our dataset, the `ocean_proximity` variable does not have that \"ordinal\" organization.\n",
     "***\n",
-    "One way to solve that problem is to use `OneHotEncoding`. <br>\n",
+    "<font color='blue'> >> </font>One way to solve that problem is to use `OneHotEncoding`. <br>\n",
     "This method will create new variables for every possible class inside your categorical variable. <br>\n",
     "\n",
     "For instance, lets say that you have a variable called `dog_breed` and inside it you have `[\"rottweiler\", \"labrador\", \"golden_retriever\"]`. <br>\n",
@@ -1650,7 +1645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1659,7 +1654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1675,7 +1670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1685,7 +1680,7 @@
        "\twith 16512 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1696,8 +1691,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The output of the OneHotEncoder is a sparse matrix. That is a representation of the data that tries to minimize memory use, by deleting all the zero values inside. <br>\n",
+    "***\n",
+    "To convert it back to a normal matrix, we can use:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1712,7 +1716,7 @@
        "       [0., 0., 0., 1., 0.]])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1722,8 +1726,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And these are the categories we had before"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1733,7 +1744,7 @@
        "       dtype=object)]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1746,7 +1757,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If there are many possible classes insided a categorical variable, the one-hot enconding methods can slow down the training process and degrade the performance of the models."
+    "<font color='red'> >> </font> If there are many possible classes inside a categorical variable, the one-hot enconding method can slow down the training process and degrade the performance of the models. Also, it is import to rember of the [Big-p, Little-n](https://machinelearningmastery.com/how-to-handle-big-p-little-n-p-n-in-machine-learning/) problem and its implications on the ML models. <br>\n",
+    "\n",
+    "**As a rule of thumb**: if there are too many classes (or if there are too many categorical variables), try a different approach. For instance if your variable `schooling` has many different classes, you could change the categories for the overall amount of years that such person has studied."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating our own transformers\n",
+    "As we have just seen above, the ScikitLearn has many transformers (OneHotEncoding, SimpleImputer, etc). These methods are great because they are standardized. Every time you execute them (using the same parameters, ofc) you will get the same results. <br>\n",
+    "\n",
+    "They are also great because they can be fit into a Pipeline. Briefly, a Pipeline would be a series of instructions (much like an algorithm) that you want to perform in your data before you train your model (actually, you can even insert model training in your pipelines). The Pipelines are great because you insure reproducibility and not only that, you can perform many tests withou having to type many lines of code. <br>\n",
+    "\n",
+    "The thing is... if you had to do some custom attribute manipulation, maybe you had to perform some sort of a join with another database, etc, these changes do not have a proper transformer in the SickitLearn library.<br>\n",
+    "\n",
+    "The good news is that **we can create custom transformers** that work in the same way that those of the library, and hence can be included in Pipelines as well! <br>\n",
+    "\n",
+    "To do so, you need to create a class that has three methods: `fit()`(that returns self), `transform()` and `fit_transform()`. We can get the last one for free by adding `BaseEstimator` in the class as well.\n",
+    "\n",
+    "**Note**: as we see more and more, reproducibility is a primal need in ML projects. You need to make sure you are doing the same thing everytime."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Here we will create a custom transfomer to add the variables we tried before "
    ]
   },
   {
@@ -1756,6 +1794,13 @@
    "outputs": [],
    "source": [
     "from sklearn.base import BaseEstimator, TransformerMixin"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we set the indexes for the variables we will need to make changes"
    ]
   },
   {
@@ -1774,10 +1819,15 @@
    "outputs": [],
    "source": [
     "class CombinedAttributesAdder(BaseEstimator, TransformerMixin):\n",
+    "    \n",
     "    def __init__(self, add_bedrooms_per_room=True): # no args and kwargs\n",
     "        self.add_bedrooms_per_room = add_bedrooms_per_room\n",
+    "    \n",
+    "    \n",
     "    def fit(self, X, y=None):\n",
     "        return self \n",
+    "    \n",
+    "    \n",
     "    def transform(self, X):\n",
     "        rooms_per_household = X[:, rooms_ix] / X[:, households_ix]\n",
     "        population_per_household = X[:, population_ix] / X[:, households_ix]\n",
