Tidy-up on the notebook

--- a/Chapter 2 - End-to-end machine learning project.ipynb
+++ b/Chapter 2 - End-to-end machine learning project.ipynb
@@ -1789,7 +1789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1805,7 +1805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1814,7 +1814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1841,7 +1841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1850,7 +1850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1859,7 +1859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1880,7 +1880,7 @@
        "        1.9859154929577465]], dtype=object)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1893,7 +1893,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Feature Scaling"
+    "### Feature Scaling\n",
+    "***\n",
+    "With a few exceptions, ML models do not perform well when the data have big differences in scale. <br>\n",
+    "\n",
+    "There are two commoen ways to get all attributes to have the same scale:\n",
+    "1. *min-max scaling* or normalization;\n",
+    "\n",
+    "This is the most simple of the two. You first subtract the minimum value for every entry, then you divide everything by the maximun minus the minimum value. The output will be a value that will be between 1 and 0. SickitLearn provides the `MinMaxScaler` transformer that does this.\n",
+    "\n",
+    "2. *standardization*.\n",
+    "\n",
+    "Here we subtract the mean value and then we divide everything by the standard deviation. This results in values with a 0 mean and with unit variance. **Importantly**, *standardization* will not shrink values to 0-1. This might be a problem form some ML algorithms. On the other hand, *standardization* is much less vulnerable to outliers. <br>\n",
+    "SickitLearn provides a transformer called `StandardScaler` that is able to perform this method.\n",
+    "***\n",
+    "As with all the transformers, **we must fit the scalers to the training data only!** Next, we use the fit scalar to transform the test model.\n",
+    "    "
    ]
   },
   {
@@ -1907,7 +1922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1917,7 +1932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1930,7 +1945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1941,16 +1956,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Categorical variable transformer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.compose import ColumnTransformer"
+    "### Categorical variable transformer\n",
+    "***\n",
+    "Using the ColumnTransformer, we can execute steps similar to a pipeline. Bu now, we need to specify a label, the pipeline and columns to be modified by that pipeline. <br>\n",
+    "\n",
+    "After doing the necssary transformations, the ColumnTransformer concatenates the outputs along the second axis"
    ]
   },
   {
@@ -1959,7 +1969,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.compose import ColumnTransformer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Names of the numeric variables\n",
     "num_attribs = list(housing_num)\n",
+    "# Name of the categorical variable - only one in this case\n",
     "cat_attribs = ['ocean_proximity']\n",
     "\n",
     "full_pipeline = ColumnTransformer([\n",
@@ -1970,7 +1991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1981,12 +2002,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Select and train a Model "
+    "## Select and train a Model \n",
+    "*** \n",
+    "After doing all the necessary data preparation, let's finally train and evaluate some models!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1994,8 +2017,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Using the LinearRegression model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -2004,7 +2034,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2015,8 +2045,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Evaluating some instances of our data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2025,8 +2062,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Applying the transformations"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2034,8 +2078,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comparing the predictions to labels"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -2053,7 +2104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -2069,8 +2120,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Now let's use the metric we discussed before, the RMSE"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2079,7 +2137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2088,7 +2146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2097,7 +2155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2106,7 +2164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -2115,7 +2173,7 @@
        "68628.19819848923"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2128,12 +2186,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Underfitting"
+    "<font color='blue'> >> </font> Our RMSE is of \\$ 68,628 dollars. \n",
+    "\n",
+    "Considering that the most of the `median_housing_values` data is within the 120,000 to 265,000, our model is not very good. \n",
+    "\n",
+    "We could also say that our model is **Underfitting** the training dataset."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Using the DecisionTreeRegressor\n",
+    "***\n",
+    "While the previous model is better suited to find linear relations in the data (LinearRegression, duh), the DecisionTreeRegressor is quite good at finding complex and non-linear relations."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2142,7 +2213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2151,7 +2222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -2160,7 +2231,7 @@
        "DecisionTreeRegressor()"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2171,7 +2242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -2180,7 +2251,7 @@
        "0.0"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2196,19 +2267,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Overfit"
+    "<font color='blue'> >> </font> Our RMSE is of \\$ 0 dollars. **Wait, does this mean that our models is perfect?**\n",
+    "\n",
+    "Well yes... but not really! The model became too good at predicting our training data and probably would not be able to generalize and perform accurate predictions with new and unseen data. \n",
+    "\n",
+    "We could also say that our model is **Overfitting** the training dataset."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Cross validation"
+    "### Cross validation\n",
+    "***\n",
+    "Up until now we have been evaluating our models only using the training dataset. That is important, but we also need to check how the model performs versus new and unseen data. That is what our *validation* fragment is for! <br>\n",
+    "\n",
+    "We can also apply the *cross validation* method to ensure more reliable results. With this methods we perform a serious of splits, trains and tests of our model. Finally, it returns an average of the scores. This is extremely useful, since we might end-up getting lucky with randomnes of the selection."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2216,8 +2295,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `cross_val_score` takes your model, your dataset, the labels, the scoring function you desire and finally, the amount of tests you wish to evaluate"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2227,7 +2313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2236,7 +2322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2247,19 +2333,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Compairing the scores of the DecisionTree and LinearRegression models"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scores: [69446.47899522 67901.12065887 69958.3236844  69281.66866845\n",
-      " 71045.64568707 73672.53197891 70566.71745428 70551.17958562\n",
-      " 74535.31474053 68195.12489912]\n",
-      "Mean: 70515.41063524684\n",
-      "Standard deviation: 2039.7407470628682\n"
+      "Scores: [68487.76663823 66799.59591713 70820.97964505 68610.59546169\n",
+      " 71316.11424825 75475.10963302 70983.73689695 70538.65854213\n",
+      " 76476.91009867 69645.88082645]\n",
+      "Mean: 70915.53479075796\n",
+      "Standard deviation: 2859.9735555185553\n"
      ]
     }
    ],
@@ -2295,12 +2388,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Random forest"
+    "We see that the DecisionTree is overtting our training data in such a way that makes its predictions on new data worse that the LinearRegression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Random forest\n",
+    "***\n",
+    "RF is a type of Ensemble Learning. It works by training many Decision Trees randomnly and then averages their predictions.\n",
+    "\n",
+    "It is also slower because of that many training steps."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2309,7 +2413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -2318,7 +2422,7 @@
        "RandomForestRegressor()"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2337,16 +2441,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "18737.529572984262"
+       "18729.80290497361"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2367,18 +2471,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scores: [49487.58731507 47587.60847495 50102.20050085 52108.07896975\n",
-      " 49496.50818608 53609.57420764 48774.60543167 48308.26093128\n",
-      " 52830.78274579 49948.24460484]\n",
-      "Mean: 50225.34513679134\n",
-      "Standard deviation: 1889.2048505866098\n"
+      "Scores: [49529.34187232 47605.70614206 50071.85510332 52320.59620136\n",
+      " 49829.11409452 53627.3872449  48828.085465   48269.31875911\n",
+      " 53021.88086377 50533.40026985]\n",
+      "Mean: 50363.66860162124\n",
+      "Standard deviation: 1923.3825613660517\n"
      ]
     }
    ],
@@ -2393,12 +2497,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Big difference on the scores. We note how the model is stil overfitting the training data"
+    "<font color='blue'> >> </font> Big difference on the scores. While RF is much better on the training set, the validation steps showed us that the model is overfitting the training data too much."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Saving models\n",
+    "***\n",
+    "I need to learn more about this library"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2407,7 +2520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -2416,7 +2529,7 @@
        "['forest_reg.pkl']"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2427,7 +2540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2438,7 +2551,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### TO DO - test some other models. SVM and neural network"
+    "## Fine-tune our model"
    ]
   },
   {
