--- a/Chapter 3 - Classification.ipynb
+++ b/Chapter 3 - Classification.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The MNIST dataset\n",
+    "# The MNIST dataset\n",
     "***\n",
     "This dataset is a famous one on the ML world. It is comprised of 70,000 handwritten digits. Each image is labeled with the digit it represents. \n",
     "\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
        "dict_keys(['data', 'target', 'frame', 'categories', 'feature_names', 'target_names', 'DESCR', 'details', 'url'])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "(70000, 784)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
        "(70000,)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,12 +111,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Lookin to one of the available digits"
+    "### Browsing one of the available digits"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
        "'5'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,14 +273,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Training a Binary Classifier\n",
+    "### Training a Binary Classifier\n",
+    "\n",
+    "Using the **Stochastic Gradient Descent** model!\n",
+    "This model is interesting because it can work with fairly big datasets quickly.\n",
+    "\n",
     "*** \n",
     "This is a simplification of our problem... Here we will create the \"5-detector\" model. Basically what we want to achieve is the ability to classify our digits into **5** or **not-5**!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,17 +293,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Using the Stochastic Gradient Descent model!\n",
-    "***\n",
-    "This model is interesting because it can work with fairly big datasets quickly."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +312,7 @@
        "SGDClassifier(random_state=42)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +391,7 @@
        "array([0.95035, 0.96035, 0.9604 ])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +437,7 @@
        "array([0.91125, 0.90855, 0.90915])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,6 +459,149 @@
     "\n",
     "This problem is also called *class-imbalance* and is definitely a *thing* when training classifier models."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Confusion matrix\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import cross_val_predict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_train_pred = cross_val_predict(sgd_clf, X_train, y_train_5, cv=3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Building our confusion matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import confusion_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[53892,   687],\n",
+       "       [ 1891,  3530]])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "confusion_matrix(y_train_5, y_train_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Well... This is a bit confusing. What those values mean?\n",
+    "\n",
+    "Every row represents a real *class*, while the columns represent the *predicted class*.\n",
+    "1. The first row considers the non-5 images, the *negative class*:\n",
+    "\n",
+    "Then, 53,892 of them were correctly predicted to be non-5 --> **True negatives**; <br>\n",
+    "While the remaining 687 were wrongly classified as 5 by our model --> **False positives**; <br>\n",
+    "\n",
+    "2. The second row considers the images of 5s, the *positive class*:\n",
+    "\n",
+    "1891 were wrongly classified as non-5s - **False negatives**; <br>\n",
+    "3530 were correctly classifed as 5s - **True positives**\n",
+    "***\n",
+    "This would be a good way to represent the results\n",
+    "\n",
+    "[True negatives,  False positives], <br>\n",
+    "[False negatives, True positives]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  What a perfect model looks like!\n",
+    "***\n",
+    "We only have true negatives and true positives. Quite utopic..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[54579,     0],\n",
+       "       [    0,  5421]])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train_perfect_predictions = y_train_5\n",
+    "confusion_matrix(y_train_5, y_train_perfect_predictions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Standard metrics\n",
+    "***\n",
+    "When working with classification problems, we will often come across these jargons: *precision*, *recall*, *f1-score* or other terms that can be used interchangeably.\n",
+    "\n",
+    "**Precision/accuracy/positive predictive value(PPV)** <br>\n",
+    "\n",
+    "This index gives us a feel about the accuracy of the positive predictions, i.e. the *ratio of trully positive results compared to all the positive results* you got. <br>\n",
+    "$ precision = \\frac{TP}{TP + FP} $\n",
+    "\n",
+    "\n",
+    "**Recall/sensitivity/true positive rate(TPR)** <br>\n",
+    "\n",
+    "The ratio of positive instances that are correctly detected by the classifier compared to all real positive values you have. <br>\n",
+    "$ recall = \\frac{TP}{TP + FN} $\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -483,6 +621,24 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "165px"
+   },
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
