Working on chapter 3

--- a/Chapter 3 - Classification.ipynb
+++ b/Chapter 3 - Classification.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The MNIST dataset\n",
+    "# A classification problem\n",
+    "***\n",
+    "As we have seen in a the previous chapters, most common ML tasks could be resumed to regression and conlcusion. We have just worked with a regression task and now we will start to dip our hands into the classification world."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The MNIST dataset\n",
     "***\n",
     "This dataset is a famous one on the ML world. It is comprised of 70,000 handwritten digits. Each image is labeled with the digit it represents. \n",
     "\n",
@@ -15,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Import the dataset"
+    "### Import the dataset"
    ]
   },
   {
@@ -49,6 +58,13 @@
     "1. *DESCR* key that describes the dataset;\n",
     "2. A *data* key coitaining an array with one row per instance and one column per feature;\n",
     "3. A *target* key containing an array with the labels"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Separating the X matrix and the target y"
    ]
   },
   {
@@ -104,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color='blue'> >> </font> There are 70,000 images and each of them have 784 features. This happens because each image is 28 x 28 pixels, and each feature represent one pixel's intensity (rangin from 0 to 255)."
+    "<font color='blue'> >> </font> There are 70,000 images and each of them has 784 features. The reason for such a large number of attributes is because each image is 28 x 28 pixels, and each feature represent one pixel's intensity (ranging from 0 to 255)."
    ]
   },
   {
@@ -184,12 +200,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Indeed we confirmed here that the first digit in our data is a 5 (even though it is far from perfect).\n",
+    "\n",
     "**Important**: we not that our label is of the type string. We need to corret this and transform it into a integer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -251,19 +269,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see above, the digits can be fairly similar to one another! This surely creates problems in our process of training the models!"
+    "As we can see above, the digits can be fairly similar to one another! This surely creates problems in our process of training the models!\n",
+    "\n",
+    "**Let's start it once and for all**???"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Well... wait! We need to split the dataset so we keep the test set safe for later!"
+    "<font color='red'>Well... wait!</font> We need to split the dataset so we keep the test set safe for later!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,13 +294,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Training a Binary Classifier\n",
+    "The mnist dataset has 10 possible digits (0-9). Before we start working with a ten-class classification, why not start with a simpler task?\n",
     "\n",
-    "Using the **Stochastic Gradient Descent** model!\n",
-    "This model is interesting because it can work with fairly big datasets quickly.\n",
+    "## Training a Binary Classifier\n",
+    "This is a simplification of our problem... Here we will create the \"5-detector\" model. Basically what we want to achieve is the ability to classify our digits into **5** or **not-5**!\n",
+    "***\n",
+    "In this case we can use a classifier model such as the **Stochastic Gradient Descent** (SGD) model!\n",
+    "This model is interesting because it can work with fairly big datasets quickly. Interestingly enough, SGD does not belong to an actual ML moodel family. It is more of a optimization technique than a model itself. This classifier is able to work with sparse matrices, which also speeds up everything.\n",
     "\n",
-    "*** \n",
-    "This is a simplification of our problem... Here we will create the \"5-detector\" model. Basically what we want to achieve is the ability to classify our digits into **5** or **not-5**!"
+    "The advantages of Stochastic Gradient Descent are:\n",
+    "* Efficiency.\n",
+    "* Ease of implementation (lots of opportunities for code tuning).\n",
+    "\n",
+    "The disadvantages of Stochastic Gradient Descent include:\n",
+    "* SGD requires a number of hyperparameters such as the regularization parameter and the number of iterations.\n",
+    "* SGD is sensitive to feature scaling.\n",
+    "\n",
+    "> [SGD documentation](https://scikit-learn.org/stable/modules/sgd.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TO DO"
    ]
   },
   {
